--- a/SMA.Tools/wwwroot/index.html
+++ b/SMA.Tools/wwwroot/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <title>SMA.Tools</title>
     <base href="/" />
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" href="SMA.Tools.styles.css" />
     <link rel="icon" href="data:,">
